Cleanup function corrections - Now cleanup correctly !

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,7 +94,8 @@
         "xutility": "cpp",
         "chrono": "cpp",
         "forward_list": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "fstream": "cpp"
     }
 
 }
